# Meterial

./: BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
3_chemical/: CHEMICAL_GOVERNANCE.md  CHEMICAL_HYGIENE_STATUS.md  ELEMENT_FOUNDATION_TEMPLATE.md  ELEMENT_REGISTRY.md  FOLDER_STRUCTURE.md  README.md
3_chemical/Aluminum_Titanium_Foundation/: CHANGELOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
3_chemical/Aluminum_Titanium_Foundation/al_ti/: constants.py
3_chemical/Battery_Dynamics_Engine/: SOURCE_OF_TRUTH.md
3_chemical/Boron_Foundation/: README_EN.md  __test__
3_chemical/Cooking_Process_Foundation/: COMMERCIAL_READINESS_EN.md  README.md  README_EN.md  SOURCE_OF_TRUTH.md  pyproject.toml
3_chemical/Cooking_Process_Foundation/cooking_process_foundation/: __init__.py  contracts.py  recipe_serde.py  sik_ingress.py  surface.py
3_chemical/Cooking_Process_Foundation/docs/: LAYER_STACK_EN.md  PRECISION_MOTION_AND_EMERGENCE_PIPELINE.md  PRECISION_MOTION_AND_EMERGENCE_PIPELINE_EN.md  ROBOT_SIK_IDEA_INTEGRATION.md  ROBOT_SIK_IDEA_INTEGRATION_EN.md
3_chemical/Cooking_Process_Foundation/tests/: test_arbiter.py  test_flow_engine.py  test_flow_mission_pause.py  test_gates_and_metrology.py  test_l4_payload.py  test_recipe_serde.py  test_sik_merge.py
3_chemical/Element_Capture_Foundation/: BLOCKCHAIN_INFO_EN.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SOURCE_OF_TRUTH.md  pyproject.toml
3_chemical/Element_Capture_Foundation/docs/: INTEGRATION_MAP.md  SPACECRAFT_SELF_SUFFICIENCY_STACK.md
3_chemical/Element_Capture_Foundation/element_capture/: __init__.py  environment.py  health.py  orbital_operations.py  separation.py  specializations.py  storage.py  waste_loop.py  waste_regeneration.py
3_chemical/Element_Capture_Foundation/element_capture/bridges/: __init__.py  eurus_bridge.py  life_support_bridge.py
3_chemical/Element_Capture_Foundation/examples/: run_artemis_like_skimming.py  run_capture_demo.py  run_platform_class_comparison.py  run_spacecraft_resource_loop.py  run_terracore_eurus_bridge_demo.py
3_chemical/Element_Capture_Foundation/scripts/: cleanup_generated.py  release_check.py
3_chemical/Element_Capture_Foundation/tests/: test_specializations.py
3_meterial/: CHEMICAL_GOVERNANCE.md  CHEMICAL_HYGIENE_STATUS.md  ELEMENT_FOUNDATION_TEMPLATE.md  ELEMENT_REGISTRY.md  FOLDER_STRUCTURE.md  README.md
3_meterial/Battery_Dynamics_Engine/: README.md  SOURCE_OF_TRUTH.md  pyproject.toml
3_meterial/Battery_Dynamics_Engine/battery_dynamics/: ecm.py
3_meterial/Battery_Dynamics_Engine/battery_pack/: __init__.py  pack_runtime.py  pack_schema.py  pack_thermal.py
3_meterial/Battery_Dynamics_Engine/tests/: conftest.py  test_battery_v3.py  test_ecm.py  test_pack.py
3_meterial/Carbon_Composite_Stack/: BLOCKCHAIN_INFO.md  README.md  README_EN.md  SIGNATURE.sha256  SOURCE_OF_TRUTH.md  pyproject.toml
3_meterial/Carbon_Composite_Stack/carbon_composite_stack/: engine_ref_adapter.py  material.py  pipeline.py
3_meterial/Carbon_Composite_Stack/docs/: VERSIONING_POLICY.md
3_meterial/Carbon_Composite_Stack/scripts/: verify_signature.py
3_meterial/Carbon_Composite_Stack/tests/: test_carbon_composite_stack.py  test_full_coverage.py
3_meterial/Lanthanum_Cerium_Praseodymium_Foundation/: README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
3_meterial/Lanthanum_Cerium_Praseodymium_Foundation/la_ce_pr/: constants.py  contracts.py  foundation.py
3_meterial/Lanthanum_Cerium_Praseodymium_Foundation/scripts/: generate_signature.py
3_meterial/Lanthanum_Cerium_Praseodymium_Foundation/tests/: test_la_ce_pr_foundation.py
3_meterial/Organic_Matter_Microbial_Fertilizer_Foundation/: README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
3_meterial/Organic_Matter_Microbial_Fertilizer_Foundation/organic_microbial_fert/: constants.py  contracts.py  foundation.py
3_meterial/Organic_Matter_Microbial_Fertilizer_Foundation/scripts/: generate_signature.py
3_meterial/Organic_Matter_Microbial_Fertilizer_Foundation/tests/: test_organic_microbial_fert_foundation.py
3_meterial/Rare_Earth_Magnet_Foundation/: README.md  README_EN.md  pyproject.toml
3_meterial/Rare_Earth_Magnet_Foundation/re_mag/: constants.py  contracts.py
3_meterial/Rare_Earth_Magnet_Foundation/scripts/: generate_signature.py
3_meterial/Rare_Earth_Magnet_Foundation/tests/: test_re_mag_foundation.py
chemical_reaction/: __init__.py  constants.py  extension_hooks.py  kinetics.py  screening.py
docs/: DESIGN_SPEC.md  DESIGN_SPEC_EN.md
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_hub_snapshot.py  verify_package_identity.py
tests/: test_chemical_foundation.py  test_package_integrity.py
(+700 files in other folders)
