[project]
name = "meterial"
version = "0.2.1"
description = "Meterial — E5 chemistry/material reaction foundation for species, thermodynamics, kinetics, equilibrium, electrochemistry, and screening"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
