[project]
name = "meterial"
version = "0.3.0"
description = "Meterial — umbrella chemistry/material repository with a stable chemical_reaction foundation package and a managed 3_chemical hub snapshot"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
