[project]
name = "aluminum-titanium-foundation"
version = "0.1.0"
description = "Al/Ti foundation — structural tradeoffs, galvanic realism, process-energy constraints."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
