[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooking-process-foundation"
version = "0.4.1"
description = "Recipe-as-process-flow: culinary skills as layers, dynamics not recipe text"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
keywords = ["cooking", "process", "culinary", "dynamics", "00_BRAIN"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cooking_process_foundation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
