[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-composite-stack"
version = "0.1.2"
description = "Carbon composite design and readiness evaluation stack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
carbon-composite-assess = "carbon_composite_stack.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
