[project]
name='organic-matter-microbial-fertilizer-foundation'
version='0.1.0'
description='Organic amendments and biofertilizers: C:N, mineralization lag, pathogen screening.'
requires-python='>=3.10'
dependencies=[]

[build-system]
requires=['setuptools>=68']
build-backend='setuptools.build_meta'
