[project]
name='rare-earth-magnet-foundation'
version='0.1.0'
description='Nd/Dy magnet layer: high flux density with thermal demagnetization and supply concentration constraints.'
requires-python='>=3.10'
dependencies=[]

[build-system]
requires=['setuptools>=68']
build-backend='setuptools.build_meta'
